--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       TZ: Asia/Jakarta
     command: ["--mysql-native-password=ON"]
     volumes:
-      - /Users/julius/metabase/mysql_data:/var/lib/mysql
-      - /Users/julius/metabase/mysql_init:/docker-entrypoint-initdb.d:ro
+      - /Users/julius/metabase_dashboard/mysql_data:/var/lib/mysql
+      - /Users/julius/metabase_dashboard/mysql_init:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
       interval: 5s
@@ -27,7 +27,7 @@ services:
     ports: ["3000:3000"]
     environment:
       # Use MySQL as Metabase's *application database* (per docs)
-      MB_DB_CONNECTION_URI: "jdbc:mysql://mysql:3306/metabase?useSSL=false"
+      MB_DB_CONNECTION_URI: "jdbc:mysql://mysql:3306/db_dashboard?useSSL=false"
       MB_DB_USER: metabase
       MB_DB_PASS: metabase
       # Optional plugins dir (e.g., add Oracle ojdbc8.jar later)
@@ -36,5 +36,5 @@ services:
       mysql:
         condition: service_healthy
     volumes:
-      - /Users/julius/metabase/metabase_data:/metabase-data
-      - /Users/julius/metabase/plugins:/plugins
+      - /Users/julius/metabase_dashboard/metabase_data:/metabase-data
+      - /Users/julius/metabase_dashboard/plugins:/plugins
